test/conformance/chainsaw/validating-policies/report/background/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment-vpol-background
  labels:
    app: test
    env: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: test
        image: nginx:latest
