test/conformance/chainsaw/validating-policies/report/background/policy-assert.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: vpol-report-background-sample
status:
  conditionStatus:
    conditions:
    - message: Policy is ready for reporting.
      reason: Succeeded
      status: "True"
      type: RBACPermissionsGranted
    ready: true
